# ACADOSCpp

./: .gitignore  CMakeLists.txt  FindACADOS.cmake  README.md  configure.sh  flake.nix  test.sh
cmake/: ACADOSCppConfig.cmake
include/ACADOSCpp/: Capsule.hpp  Capsule.ipp
lib/: link_libs.json
src/: Capsule.cpp
test/: CMakeLists.txt  generate_solver.py  test.cpp
test/lib/: README.md
